Nova lógica para Inventarios, Novos commands errors, configuração e otimização de todo o código